@@ -1,4 +1,4 @@
-val scala3Version = "3.3.0"
+val scala3Version = "3.3.1"
 
 lazy val root = project
   .in(file("."))
@@ -6,6 +6,6 @@ lazy val root = project
     name := "Scala 3 Async Prototype",
     version := "0.1.0-SNAPSHOT",
     scalaVersion := scala3Version,
-    javaOptions += "--enable-preview --version 19",
+    javaOptions += "--version 21",
     libraryDependencies += "org.scalameta" %% "munit" % "0.7.29" % Test
   )
